codegen/ui_tests/rhai_fn_setter_index_signature.stderr
error: index setter requires exactly 3 parameters
  --> ui_tests/rhai_fn_setter_index_signature.rs:13:20
   |
13 |     pub fn test_fn(input: Point) -> bool {
   |                    ^^^^^
